# hyle-webauthn-identity-contract

./: .gitignore  Cargo.toml  README.md
jolt/host/: Cargo.toml
lib/: Cargo.toml
lib/src/: contract.rs  helpers.rs  lib.rs
powdr/: Cargo.toml  README.md
powdr/guest/: Cargo.toml
powdr/guest/src/: main.rs
powdr/src/: main.rs
proof-examples/: claim-contract.json  login-proof.json  login.json  register-proof.json  register.json
risczero/host/: Cargo.toml
risczero/host/src/: main.rs
risczero/methods/: Cargo.toml
risczero/methods/guest/: Cargo.toml
risczero/methods/guest/src/: main.rs
sp1/lib/src/: lib.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
