[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "4.0.0-rc.1", optional = true, default-features = false, features = ['lib']}
sp1-sdk = { version = "4.0.0-rc.1", optional = true, default-features = false}
risc0-zkvm = { version = "1.1.2", optional = true, default-features = false, features = ['std'] }

# Hyle
hyle-sdk = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contract-sdk", branch = "main" }
hyle-contracts = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contracts", branch = "main" }

# Other
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
serde_cbor = "0.11.2"
bincode = "1.3.3"
p256 = { version = "0.13.2", features = ["ecdsa"] }
sha2 = { version = "0.10.8", features = ["std"] }


[target.'cfg(all(target_os = "zkvm", target_arch = "riscv32"))'.dependencies]
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.2", optional = true, features = [
  "std",
] }

[features]
sp1 = ["sp1-zkvm"]
sdk-sp1 = ["sp1-sdk"]
risczero = ["risc0-zkvm"]
powdr = ["powdr-riscv-runtime"]

